--- a/src/_media.scss
+++ b/src/_media.scss
@@ -3,5 +3,41 @@
     @media (max-width: 599px) {
       @content;
     }
+  } @else if $size == tablet-portrait-up {
+    @media (max-width: 768px) {
+      @content;
+    }
+  } @else if $size == tablet-landscape-up {
+    @media (max-width: 900px) {
+      @content;
+    }
+  } @else if $size == desktop-up {
+    @media (max-width: 1500px) {
+      @content;
+    }
+  } @else if $size == big-desktop-up {
+    @media (max-width: 1800px) and (max-height: 1024px) and (min-width: 1400px) {
+      @content;
+    }
+  } @else if $size == small-phone {
+    @media (max-width: 340px) {
+      @content;
+    }
+  } @else if $size == smaller-desktop {
+    @media (max-width: 1200px) {
+      @content;
+    }
+  } @else if $size == tab {
+    @media (max-width: 1000px) {
+      @content;
+    }
+  } @else if $size == big_tab {
+    @media (min-width: 1000px) and (max-width: 1024px) and (min-height: 1024px) {
+      @content;
+    }
+  } @else if $size == long_desktop {
+    @media (min-width: 600px) and (max-width: 1400px) and (min-height: 900px) {
+      @content;
+    }
   }
 }
