--- a/site/src/App.scss
+++ b/site/src/App.scss
@@ -184,3 +184,53 @@ body {
   100% {
   }
 }
+
+%spinner {
+  position: relative !important;
+  overflow: hidden;
+}
+
+%spinner_before {
+  content: '';
+  z-index: 60;
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%) rotate(0);
+  border-radius: 50%;
+  border: 4px solid rgb(230, 88, 112);
+  border-top-color: transparent;
+  animation: spinner 0.3s linear infinite;
+  cursor: default;
+}
+
+.spinner1,
+.spinner2 {
+  @extend %spinner;
+  min-height: 100px;
+}
+
+.spinner1::before,
+.spinner2::before {
+  @extend %spinner_before;
+}
+
+.spinner1::after {
+  content: '';
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(#000, 0.05);
+  top: 0;
+  left: 0;
+}
+
+@keyframes spinner {
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
