--- a/site/src/App.scss
+++ b/site/src/App.scss
@@ -19,6 +19,11 @@ body {
   background-repeat: no-repeat;
   // background-size: 70vw 100%;
   // background-position: 40vw 0;
+
+  @include for-size(phone-only) {
+    background-position: 80% 0;
+    // background-size: 100vh 100vh;
+  }
 }
 
 .main_sec {
@@ -122,11 +127,28 @@ body {
   padding: 30px;
   margin-top: 20px;
 
+  @include for-size(phone-only) {
+    padding: 20px;
+  }
+
+  .img_sc {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  img {
+    width: 150px;
+  }
+
   h1 {
     font-size: 1.2em;
     margin: auto;
     text-align: center;
     margin-bottom: 20px;
+
+    @include for-size(phone-only) {
+      font-size: 1em;
+    }
   }
 
   @media print {
